add comment and little fix

--- a/src/app/components/registration-information/registration-information.component.html
+++ b/src/app/components/registration-information/registration-information.component.html
@@ -1,4 +1,4 @@
-<form action="your-action" (submit)="onFormSubmit($event, email)" *ngIf="visAll">
+<form action="your-action" (submit)="onFormSubmit($event)" *ngIf="visAll">
     <div class="dx-fieldset">
         <div class="dx-fieldset-header">Регистрация</div>
         <div class="dx-field">
